[package]
name = "herbie-tui"
version = "0.1.0"
description = "TUI for Controlling HERBIE Robot"
authors = ["Sidney Nimako <snibo13@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
itertools = "0.14.0"
indoc = "2.0.6"
ratatui-core = "0.0.0"
local-ip-address = "0.6.8"
gethostname = "1.0.2"
